# help-desk-client

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml
.github/workflows/: ci.yml
help_desk_client/: halo.py  interfaces.py  zendesk_manager.py
helpdesk_client/: __init__.py  helpdesk_client.py  interfaces.py  zendesk_client.py  zendesk_manager.py
helpdesk_client/zendesk/: utils.py  zendesk_manager.py
tests/: test_zendesk_client.py  test_zendesk_manager.py
